# UR5e_robotiq85_pick-place

./: LICENSE  README.md
Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_control.launch.py
ur5e_golf_pick_place/: package.xml  setup.cfg  setup.py
ur5e_golf_pick_place/config/: initial_positions.yaml  ur5e_gripper_controllers.yaml
ur5e_golf_pick_place/launch/: spawn_ur5_robotiq.launch.py  ur5e_golf_simulation.launch.py  ur5e_robotiq_moveit.launch.py  view_ur5e.launch.py
ur5e_golf_pick_place/rviz/: view_ur5e_robotiq.rviz
ur5e_golf_pick_place/ur5e_golf_pick_place/pick_place_exercise/: Pick_and_place.py
ur5e_golf_pick_place/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro  ur5e_macro.xacro  ur5e_robotiq85.urdf.xacro
ur5e_golf_pick_place/worlds/: golf_workspace.world
ur5e_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_gripper_moveit_config/config/: ur.srdf  ur.urdf.xacro
ur5e_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
